--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -5,6 +7,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 code {
@@ -28,8 +33,9 @@ code {
 
   --font-size: 15px;
 
-   /* fonts */
-
-   --Alata-Weight: 400;
-  --JosefinSans-Weight: 300; 
+  /* fonts */
+  --Alata: "Alata", sans-serif;
+  --Alata-Weight: 400;
+  --JosefinSans: "Josefin Sans", sans-serif;
+  --JosefinSans-Weight: 300;
 }
