--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  opacity:
 }
 
 .appContent {
@@ -18,7 +19,7 @@
 .appHeader {
   width: 100%;
   height: 100%;
-  background-image: url("./images/desktop/image-hero.jpg");
+  background:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("./images/desktop/image-hero.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
