--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  opacity:
+  background-color: var(--White)
 }
 
 .appContent {
