--- a/src/components/leader/leader.css
+++ b/src/components/leader/leader.css
@@ -20,6 +20,7 @@
   justify-content: center;
   align-items: flex-start;
   flex-direction: column;
+  left: 960px;
   top: 980px;
   padding: 5rem 0 5rem 7rem;
 }
