--- a/src/components/creations/creations.css
+++ b/src/components/creations/creations.css
@@ -1,3 +1,147 @@
-.creationContainer{
-  background-color: var(--White)
+.creationContainer {
+  background-color: var(--White);
+  width: 1132px;
+  height: 100%;
+}
+
+.creationHeaderContainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.creationHeader {
+  font-family: var(--JosefinSans);
+  font-weight: 300;
+  font-size: 50px;
+}
+
+.creationGallory {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  margin: 30px 0 150px 0;
+}
+
+.creationButton {
+  height: 100%;
+  width: 14%;
+  padding: 8px;
+  background: none;
+  border: 2px solid var(--veryDarkGray);
+  font-size: 15px;
+  font-family: var(--Alata);
+  letter-spacing: 4px;
+}
+
+.creationButton:hover {
+  background-color: var(--black);
+  color: var(--White);
+  cursor: pointer;
+}
+
+.topGallory,
+.bottomGallory {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  margin-bottom: 30px;
+}
+
+.galloryImgEarth,
+.galloryImgArcade,
+.galloryImgSoccer,
+.galloryImgGrid,
+.galloryImgAbove,
+.galloryImgBorealis,
+.galloryImgCuriosity,
+.galloryImgFisheye {
+  width: 220px;
+  height: 450px;
+  font-family: var(--JosefinSans);
+  font-weight: 300;
+  font-size: 35px;
+  color: var(--White);
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+  padding: 0 0 2vw 2vw;
+  repeat: none;
+}
+
+.galloryImgEarth:hover,
+.galloryImgArcade:hover,
+.galloryImgSoccer:hover,
+.galloryImgGrid:hover,
+.galloryImgAbove:hover,
+.galloryImgBorealis:hover,
+.galloryImgCuriosity:hover,
+.galloryImgFisheye:hover {
+  opacity: 0.25;
+  color: var(--black);
+  cursor: pointer;
+}
+
+.galloryImgEarth {
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)),
+    url("../../images/desktop/image-deep-earth.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.galloryImgArcade {
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)),
+    url("../../images/desktop/image-night-arcade.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.galloryImgSoccer {
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)),
+    url("../../images/desktop/image-soccer-team.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.galloryImgGrid {
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)),
+    url("../../images/desktop/image-grid.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.galloryImgAbove {
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)),
+    url("../../images/desktop/image-from-above.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.galloryImgBorealis {
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)),
+    url("../../images/desktop/image-pocket-borealis.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.galloryImgCuriosity {
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)),
+    url("../../images/desktop/image-curiosity.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.galloryImgFisheye {
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)),
+    url("../../images/desktop/image-fisheye.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
