--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -57,6 +57,7 @@
   color: var(--White);
   font-size: 15px;
   font-family: var(--Alata);
+  position: relative;
 }
 
 .footerLinkAbout:hover,
@@ -71,50 +72,55 @@
   content: "";
   position: absolute;
   height: 2px;
-  width: 1.25%;
+  width: 70%;
   background-color: var(--White);
-  top: 2945px;
-  right: 1486px;
+  bottom:-4px;
+  left:6px;
+  right:0;
 }
 
 .footerLinkCareers:hover::after {
   content: "";
   position: absolute;
   height: 2px;
-  width: 1.25%;
+  width: 65%;
   background-color: var(--White);
-  top: 2945px;
-  right: 1405px;
+  bottom:-4px;
+  left:12px;
+  right: 0;
 }
 
 .footerLinkEvents:hover::after {
   content: "";
   position: absolute;
   height: 2px;
-  width: 1.25%;
+  width: 70%;
   background-color: var(--White);
-  top: 2945px;
-  right: 1325px;
+  bottom:-4px;
+  left:6px;
+  right: 0;
 }
 
 .footerLinkProducts:hover::after {
   content: "";
   position: absolute;
   height: 2px;
-  width: 1.25%;
+  width: 65%;
   background-color: var(--White);
-  top: 2945px;
-  right: 1240px;
+  bottom:-4px;
+  left:11px;
+  right: 0;
 }
 
 .footerLinkSupport:hover::after {
   content: "";
   position: absolute;
   height: 2px;
-  width: 1.25%;
+  width: 65%;
   background-color: var(--White);
-  top: 2945px;
-  right: 1150px;
+  bottom:-4px;
+  left:11px;
+  right: 0;
 }
 
 .socialMediaLinkContainer {
@@ -125,7 +131,8 @@
   align-items: flex-end;
   flex-direction: row;
   margin-top: 15px;
-  margin-bottom: -5px
+  margin-bottom: -5px;
+  position:relative;
 }
 
 .facebookContainer:hover,
@@ -139,40 +146,44 @@
   content: "";
   position: absolute;
   height: 2px;
-  width: 1.25%;
+  width: 16%;
   background-color: var(--White);
-  top: 2900px;
-  right: 518px;
+  bottom: -4px;
+  left:0;
+  right: 0;
 }
 
 .twitterContainer:hover::after {
   content: "";
   position: absolute;
   height: 2px;
-  width: 1.25%;
+  width: 16%;
   background-color: var(--White);
-  top: 2900px;
-  right: 475px;
+  bottom: -4px;
+  left:43px;
+  right:0;
 }
 
 .pinterestContainer:hover::after {
   content: "";
   position: absolute;
   height: 2px;
-  width: 1.25%;
+  width: 16%;
   background-color: var(--White);
-  top: 2900px;
-  right: 432px;
+  bottom: -4px;
+  left:86px;
+  right:0;
 }
 
 .instagramContainer:hover::after {
   content: "";
   position: absolute;
   height: 2px;
-  width: 1.25%;
+  width: 16%;
   background-color: var(--White);
-  top: 2900px;
-  right: 389px;
+  bottom: -4px;
+  left:129px;
+  right:0;
 }
 
 .copyright {
