--- a/src/components/leader/leader.css
+++ b/src/components/leader/leader.css
@@ -5,12 +5,13 @@
 .leaderContent {
   height: 100%;
   width: 100%;
+  position: relative;
 }
 
 .leaderBackdrop {
   position: absolute;
-  top: 800px;
-  left: 380px;
+  top: 140px;
+  right: -209px;
 }
 
 .leaderInfoContaienr {
@@ -20,8 +21,8 @@
   justify-content: center;
   align-items: flex-start;
   flex-direction: column;
-  left: 960px;
-  top: 980px;
+  right: -630px;
+  top: 300px;
   padding: 5rem 0 5rem 7rem;
 }
 
@@ -29,7 +30,7 @@
   font-family: var(--JosefinSans);
   font-weight: 300;
   font-size: 50px;
-  width: 35rem;
+  width: 464px;
 }
 
 .leaderInfo {
