--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -30,6 +30,7 @@
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
+  position: relative
 }
 
 .navbarLinkAbout,
@@ -41,6 +42,7 @@
   color: var(--White);
   font-size: 15px;
   font-family: var(--Alata);
+  position: relative;
 }
 
 .navbarLinkAbout:hover,
@@ -55,48 +57,53 @@
   content: "";
   position: absolute;
   height: 2px;
-  width: 1.25%;
+  width: 70%;
   background-color: var(--White);
-  top: 97px;
-  right: 752px;
+  bottom:-4px;
+  left:6px;
+  right:0;
 }
 
 .navbarLinkCareers:hover::after {
   content: "";
   position: absolute;
   height: 2px;
-  width: 1.25%;
+  width: 65%;
   background-color: var(--White);
-  top: 97px;
-  right: 667px;
+  bottom:-4px;
+  left:12px;
+  right: 0;
 }
 
 .navbarLinkEvents:hover::after {
   content: "";
   position: absolute;
   height: 2px;
-  width: 1.25%;
+  width: 70%;
   background-color: var(--White);
-  top: 97px;
-  right: 585px;
+  bottom:-4px;
+  left:6px;
+  right: 0;
 }
 
 .navbarLinkProducts:hover::after {
   content: "";
   position: absolute;
   height: 2px;
-  width: 1.25%;
+  width: 65%;
   background-color: var(--White);
-  top: 97px;
-  right: 496px;
+  bottom:-4px;
+  left:11px;
+  right: 0;
 }
 
 .navbarLinkSupport:hover::after {
   content: "";
   position: absolute;
   height: 2px;
-  width: 1.25%;
+  width: 65%;
   background-color: var(--White);
-  top: 97px;
-  right:403px;
+  bottom:-4px;
+  left:11px;
+  right: 0;
 }
