--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -8,7 +8,7 @@
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
-  padding: 3.3vw 8vw 3.3vw 8vw;
+  padding: 3.3vw 159px 3.3vw 159px;
 }
 
 .headerLogo {
