--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,6 +1,9 @@
 .navbarContainer {
   width: 100%;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .navbarContent {
@@ -9,6 +12,8 @@
   align-items: center;
   flex-direction: row;
   padding: 3.3vw 159px 3.3vw 159px;
+  width: 100%;
+  height: 100%
 }
 
 .headerLogo {
@@ -30,7 +35,7 @@
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
-  position: relative
+  position: relative;
 }
 
 .navbarLinkAbout,
@@ -59,9 +64,9 @@
   height: 2px;
   width: 70%;
   background-color: var(--White);
-  bottom:-4px;
-  left:6px;
-  right:0;
+  bottom: -4px;
+  left: 6px;
+  right: 0;
 }
 
 .navbarLinkCareers:hover::after {
@@ -70,8 +75,8 @@
   height: 2px;
   width: 65%;
   background-color: var(--White);
-  bottom:-4px;
-  left:12px;
+  bottom: -4px;
+  left: 12px;
   right: 0;
 }
 
@@ -81,8 +86,8 @@
   height: 2px;
   width: 70%;
   background-color: var(--White);
-  bottom:-4px;
-  left:6px;
+  bottom: -4px;
+  left: 6px;
   right: 0;
 }
 
@@ -92,8 +97,8 @@
   height: 2px;
   width: 65%;
   background-color: var(--White);
-  bottom:-4px;
-  left:11px;
+  bottom: -4px;
+  left: 11px;
   right: 0;
 }
 
@@ -103,7 +108,14 @@
   height: 2px;
   width: 65%;
   background-color: var(--White);
-  bottom:-4px;
-  left:11px;
+  bottom: -4px;
+  left: 11px;
   right: 0;
+}
+
+@media only screen and (max-width: 1200px) {
+  .navbarContent {
+    width: 80%;
+    padding: 3vw
+  }
 }
