--- a/src/components/leader/leader.css
+++ b/src/components/leader/leader.css
@@ -60,7 +60,7 @@
   .leaderInfoContaienr {
     width: 36vw;
     height: 25vw;
-    right: -500px;
+    right: -46vw;
     top: 300px;
   }
   .leaderHeader {
