--- a/src/components/creations/creations.css
+++ b/src/components/creations/creations.css
@@ -57,7 +57,7 @@
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
-  margin:0 45px 30px 45px;
+  margin: 0 45px 30px 45px;
 }
 
 .galloryImgEarth,
@@ -163,5 +163,105 @@
     height: 40vw;
     font-size: 3vw;
   }
+}
 
+@media only screen and (min-width: 810px) {
+  .creationMobileButton {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 810px) {
+  .creationHeaderContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .creationContent {
+    width: 85%;
+  }
+  .creationHeader {
+    text-align: center;
+    font-size: 8vw;
+  }
+  .creationButton {
+    display: none;
+  }
+  .bottomGallory,
+  .topGallory {
+    flex-direction: column;
+    width: 100%;
+  }
+  .galloryImgEarth,
+  .galloryImgArcade,
+  .galloryImgSoccer,
+  .galloryImgGrid,
+  .galloryImgAbove,
+  .galloryImgBorealis,
+  .galloryImgCuriosity,
+  .galloryImgFisheye {
+    width: 100%;
+    height: 30vw;
+    font-size: 6vw;
+    margin-bottom: 20px;
+    padding: 0px 0px 20px 20px;
+  }
+  .galloryHeader{
+    width: 50%
+  }
+  .galloryImgEarth {
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.1)),
+      url("../../images/mobile/image-deep-earth.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .galloryImgArcade {
+    background: linear-gradient( rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
+      url("../../images/mobile/image-night-arcade.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .galloryImgSoccer {
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
+      url("../../images/mobile/image-soccer-team.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .galloryImgGrid {
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
+      url("../../images/mobile/image-grid.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .galloryImgAbove {
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
+      url("../../images/mobile/image-from-above.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .galloryImgBorealis {
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
+      url("../../images/mobile/image-pocket-borealis.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .galloryImgCuriosity {
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
+      url("../../images/mobile/image-curiosity.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .galloryImgFisheye {
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
+      url("../../images/mobile/image-fisheye.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 }
