--- a/src/components/leader/leader.css
+++ b/src/components/leader/leader.css
@@ -53,7 +53,7 @@
     width: 50vw;
     height: 37vw;
   }
-  .leaderBackdrop{
+  .leaderBackdrop {
     top: 140px;
     right: -100px;
   }
@@ -66,9 +66,52 @@
   .leaderHeader {
     font-size: 3vw;
     width: 25vw;
-    margin-bottom: 5px
+    margin-bottom: 5px;
+  }
+  .leaderInfo {
+    font-size: 1vw;
+  }
+}
+
+@media only screen and (max-width: 810px) {
+  .leaderContainer {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 80px
+  }
+  .leaderContent {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: static;
+  }
+  .leaderBackdrop {
+    position: static;
+    width: 85%;
+    height: 20%;
+  }
+  .backdrop {
+    width: 100%;
+    height: 100%;
+  }
+  .leaderInfoContaienr {
+    position: static;
+    padding: 0;
+    width: 80%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .leaderHeader {
+    font-size: 9vw;
+    text-align: center;
+    width: 100%;
   }
   .leaderInfo{
-    font-size: 1vw
+    font-size: 3.7vw;
+    width:87%;
+    text-align: center;
   }
 }
