--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -13,7 +13,7 @@
   flex-direction: row;
   padding: 3.3vw 159px 3.3vw 159px;
   width: 100%;
-  height: 100%
+  height: 100%;
 }
 
 .headerLogo {
@@ -116,9 +116,25 @@
 @media only screen and (max-width: 1200px) {
   .navbarContent {
     width: 80%;
-    padding: 3vw
+    padding: 3vw;
   }
-  .navLinks{
-    width: 45%
+  .navLinks {
+    width: 45%;
+  }
+}
+
+@media only screen and (max-width: 810px) {
+  .navbarContainer {
+    width: 100%;
+  }
+  .navbarContent {
+    padding: 11vw 3vw 20vw 7vw;
+  }
+  .headerLogo {
+    width: 65vw;
+    margin-bottom: 70px
+  }
+  .navLinks {
+    display: none;
   }
 }
