--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--White)
+  background-color: var(--White);
 }
 
 .appContent {
@@ -19,7 +19,8 @@
 .appHeader {
   width: 100%;
   height: 100%;
-  background:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("./images/desktop/image-hero.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url("./images/desktop/image-hero.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -29,27 +30,30 @@
   flex-direction: column;
 }
 
-.mainContent{
+.mainContent {
   background-color: var(--White);
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  width: 100%;
 }
 
 @media only screen and (max-width: 1200px) {
-  .App{
-    width: 100%
+  .App {
+    width: 100%;
+    height: 100%;
   }
 }
 
 @media only screen and (max-width: 810px) {
-  .appHeader{
-    background:linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("./images/mobile/image-hero.jpg");
-   background-size: cover;
-   background-position: 50% 10%;
-   background-repeat: no-repeat;
-   padding-bottom: 40vw
-   ; margin-bottom: 100px
+  .appHeader {
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
+      url("./images/mobile/image-hero.jpg");
+    background-size: cover;
+    background-position: 50% 10%;
+    background-repeat: no-repeat;
+    padding-bottom: 40vw;
+    margin-bottom: 100px;
   }
 }
