--- a/src/components/leader/leader.css
+++ b/src/components/leader/leader.css
@@ -77,7 +77,7 @@
   .leaderContainer {
     width: 100%;
     height: 100%;
-    margin-bottom: 80px
+    margin-bottom: 80px;
   }
   .leaderContent {
     display: flex;
@@ -109,9 +109,9 @@
     text-align: center;
     width: 100%;
   }
-  .leaderInfo{
+  .leaderInfo {
     font-size: 3.7vw;
-    width:87%;
+    width: 87%;
     text-align: center;
   }
 }
