--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  position: relative;
 }
 
 .mainContent {
@@ -55,5 +56,6 @@
     background-repeat: no-repeat;
     padding-bottom: 40vw;
     margin-bottom: 100px;
+    position: relative;
   }
 }
